$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-01-26 [B] Fixing translation mistake for util.php (thread ID 63417) {GauGau}
2010-01-24 [A] Added check to plugin manager for version requirements (thread ID 63279) {GauGau}
2010-01-22 [A] Added plugin hook 'thumb_html_title' (thread ID 63321) {timoswelt}
2010-01-20 [B] Fixed display of 'optional information' header on register form (thread ID 63338) {eenemeenemuu}
2010-01-20 [C] Centered film strip thumbnails (thread ID 63320) {eenemeenemuu}
2010-01-20 [B] Fixed film strip jump label for lastcom meta album {eenemeenemuu}
2010-01-20 [C] Added title and alt attributes to ajax loaded film strip thumbnails (thread ID 63321) {eenemeenemuu}
2010-01-19 [B] Fixed ajax film strip target for lastcom meta album (thread ID 63319) {eenemeenemuu}
2010-01-19 [B] Set content type to 'text/plain' for plain text ajax replies to bypass faulty ad injection on some free hosters (thread ID 63119) {eenemeenemuu}
2010-01-19 [B] Count admin hits during slideshow if enabled in config {eenemeenemuu}
2010-01-18 [A] Added icon for Windows 7 {GauGau}
2010-01-17 [A] Added generic thumbnail for flv files to reflect t he increasing importance of that file type {GauGau}
2010-01-17 [C] Call jump label 'top_display_media' from thumbnail view {eenemeenemuu}
2010-01-16 [B] Redirect to the newly uploaded picture more reliably (thread ID 63270) {Nibbler}
2010-01-16 [A] Added plugin hook 'javascript_includes' (thread ID 63185) {eenemeenemuu}
2010-01-15 [B] Fixed keyword dupes in keyword manager (thread ID 63228) {eenemeenemuu}