@@ -1121,7 +1121,7 @@ $lang_picinfo['DigitalZoom'] = 'Цифрово увеличение';
 $lang_picinfo['AFFocusPosition'] = 'AF позиция на фокуса';
 $lang_picinfo['Saturation'] = 'Наситеност';
 $lang_picinfo['NoiseReduction'] = 'Понижение на шума';
-$lang_picinfo['FlashPixVersion'] = 'Flash Pix Версия';
+$lang_picinfo['FlashPixVersion'] = 'FlashPix Версия';
 $lang_picinfo['ExifImageWidth'] = 'EXIF ширина';
 $lang_picinfo['ExifImageHeight'] = 'EXIF височина';
 $lang_picinfo['ExifInteroperabilityOffset'] = 'EXIF Interoperability отместване';
