@@ -1121,7 +1121,7 @@ $lang_picinfo['DigitalZoom'] = 'Digital Zoom';
 $lang_picinfo['AFFocusPosition'] = 'AF Focus Position';
 $lang_picinfo['Saturation'] = 'Saturation';
 $lang_picinfo['NoiseReduction'] = 'Noise Reduction';
-$lang_picinfo['FlashPixVersion'] = 'Flash Pix Version';
+$lang_picinfo['FlashPixVersion'] = 'FlashPix Version';
 $lang_picinfo['ExifImageWidth'] = 'EXIF Image Width';
 $lang_picinfo['ExifImageHeight'] = 'EXIF Image Height';
 $lang_picinfo['ExifInteroperabilityOffset'] = 'EXIF Interoperability Offset';
