@@ -1145,7 +1145,7 @@ $lang_picinfo['DigitalZoom'] = 'Digitaler Zoom';
 $lang_picinfo['AFFocusPosition'] = 'Autofokus-Position';
 $lang_picinfo['Saturation'] = 'Sättigung';
 $lang_picinfo['NoiseReduction'] = 'Rauschunterdrückung';
-$lang_picinfo['FlashPixVersion'] = 'Flash Pix Version';
+$lang_picinfo['FlashPixVersion'] = 'FlashPix Version';
 $lang_picinfo['ExifImageWidth'] = 'Exif Bildbreite';
 $lang_picinfo['ExifImageHeight'] = 'Exif Bildhöhe';
 $lang_picinfo['ExifInteroperabilityOffset'] = 'Exif Zusammenarbeitsfähigkeit Offset';
