@@ -1121,7 +1121,7 @@ $lang_picinfo['DigitalZoom'] = 'Zoom cyfrowy';
 $lang_picinfo['AFFocusPosition'] = 'Pozycja AF ogniskowej';
 $lang_picinfo['Saturation'] = 'Nasycenie';
 $lang_picinfo['NoiseReduction'] = 'Redukcja szumów';
-$lang_picinfo['FlashPixVersion'] = 'Wersja Flash Pix';
+$lang_picinfo['FlashPixVersion'] = 'Wersja FlashPix';
 $lang_picinfo['ExifImageWidth'] = 'Szerkość obrazu wg. Exif';
 $lang_picinfo['ExifImageHeight'] = 'Wysokość obrazu wg. Exif';
 $lang_picinfo['ExifInteroperabilityOffset'] = 'Przesunięcie Exif';
